Updates from last few practices.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -791,7 +791,8 @@
     "\n",
     "6. Converting a collection of words to a String:\n",
     "   - The words in `wordList` are joined using a space delimiter using `String.join()`.\n",
-    "   - The modified Sentence is printed."
+    "   - The modified Sentence is printed.\n",
+    "   - NOTE: `String.join()` requires strings as items in the iterable, so you'd have to convert first if it isn't that way."
    ]
   },
   {
