--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -1371,9 +1371,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "39cd1008",
+   "metadata": {},
+   "source": [
+    "# Generic Array\n",
+    "\n",
+    "While you __can take__ a genric array, you __cannot create__ one within a generic method/class.\n",
+    "\n",
+    "This is an explicit restriction in the compiler that has to do with guarantees of __covariance of arrays__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3b1aeac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GenericArray {\n",
+    "    /* ILLEGAL\n",
+    "    public static <T> T[] f() {\n",
+    "        return new T[10];\n",
+    "    }\n",
+    "    */\n",
+    "    \n",
+    "    public static <T> T[] g(T[] arr) {\n",
+    "        return arr;\n",
+    "    }\n",
+    "    \n",
+    "    public static void main() {\n",
+    "        // var a = f(); // ILLEGAL\n",
+    "        var b = g(new Integer[] {1, 2, 3, 4, 5});\n",
+    "    }\n",
+    "}\n",
+    "GenericArray.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9604b087",
+   "id": "cbe33aa5",
    "metadata": {},
    "outputs": [],
    "source": []
