--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -899,6 +899,7 @@
     "\n",
     "- You can mark a method as `synchronized` to have it lock on the class instance as the lock object.\n",
     "    - The lock is __reentrant__, which means if the same thread locks multiple times, it will just refcount it and keep going (rather than block its own self)\n",
+    "      - The same thread can lock in __multiple locations__ - the point is the same thread locking on the same synchronization object\n",
     "- If the method is `static`, the class itself is the lock object.\n",
     "- You can mark a __block__ as `synchronized` instead and pass in any object you want as the lock object.\n",
     "- For more specialized types of locks, see the classes in `java.util.concurrent`"
