Adding some more items that came up recently.

--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -2587,9 +2587,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89a88857",
+   "metadata": {},
+   "source": [
+    "# Class Implementing Functional Interface\n",
+    "\n",
+    "Since a function interface is just an interface, you can implement it with a class.\n",
+    "\n",
+    "This is as class as you get to a callable object in Java."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "71fd1a0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.function.Function;\n",
+    "\n",
+    "class Multiply implements Function<Integer, Integer> {\n",
+    "    private int multipler;\n",
+    "    \n",
+    "    public Multiply(int multipler) {\n",
+    "        this.multipler = multipler;\n",
+    "    }\n",
+    "    \n",
+    "    @Override\n",
+    "    public Integer apply(Integer x) {\n",
+    "        return x * multipler;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Demo {\n",
+    "    public static void main() {\n",
+    "        Function<Integer, Integer> f = new Multiply(10);\n",
+    "        System.out.println(f.apply(3));\n",
+    "    }\n",
+    "}\n",
+    "Demo.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51053eb1",
+   "id": "08f7aba6",
    "metadata": {},
    "outputs": [],
    "source": []
