--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "3b1aeac3",
    "metadata": {},
    "outputs": [],
@@ -1409,9 +1409,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2243382a",
+   "metadata": {},
+   "source": [
+    "# Calling Generic Constructor\n",
+    "\n",
+    "Because of __type erasure__, you __cannot__ call the constructor of a type arg, even if the base has that constructor.\n",
+    "\n",
+    "To get around that, you'd have to pass a class object and use reflection, or use a factory method on the class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "92ec2d16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass {\n",
+    "    public MyClass(int x, int y) {}\n",
+    "}\n",
+    "\n",
+    "class MyOtherclass {}\n",
+    "\n",
+    "class ConstructorDemo {\n",
+    "    static <T> void f() {\n",
+    "        //T t = new T(); // ILLEGAL\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        //ConstructorDemo.<Integer>f();\n",
+    "        //ConstructorDemo.<MyClass>f();\n",
+    "        //ConstructorDemo.<MyOtherClass>f();\n",
+    "    }\n",
+    "}\n",
+    "ConstructorDemo.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbe33aa5",
+   "id": "b9b34b0a",
    "metadata": {},
    "outputs": [],
    "source": []
