More LeetCode practice items.

--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -1055,7 +1055,7 @@
    "source": [
     "# Regex Multiple Matches and Capture Groups\n",
     "\n",
-    "You have to use __double escaping__ because Java doesn't yet have raw strings (except for multiline verbatim strings).  If you really wanted to you could use `\"\"\"` strings, but you'd have to have that initial (ignored) newline.\n",
+    "You have to use __double escaping__ because Java doesn't yet have raw strings.\n",
     "\n",
     "`Pattern.compile` can be configured to do __multiline__ so that ^ and $ match on each line instead of the whole string.\n",
     "\n",
@@ -1169,7 +1169,7 @@
     "\n",
     "This isn't specific to Java, but I wasn't sure where else to put it to make sure I'd see it frequently.\n",
     "\n",
-    "Keep in mind, you will have to replace all `\\` with `\\\\` to do this for real (or use verbatim strings).\n",
+    "Keep in mind, you will have to replace all `\\` with `\\\\` to do this for real.\n",
     "\n",
     "- `abd|def` means abc OR def\n",
     "- `\\s` means whitespace character\n",
@@ -1694,9 +1694,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b698fcac",
+   "metadata": {},
+   "source": [
+    "# Raw Strings\n",
+    "\n",
+    "__No such thing__ in Java.  Verbatim strings don't do it either, as shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7bdebcff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "class RawDemo {\n",
+    "    public static void main() {\n",
+    "        System.out.println(\"\"\"\n",
+    "        a\\nb\"\"\");\n",
+    "    }\n",
+    "}\n",
+    "RawDemo.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc91c61c",
+   "id": "a998e851",
    "metadata": {},
    "outputs": [],
    "source": []
