More LeetCode practice.

--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -1448,9 +1448,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3dae956d",
+   "metadata": {},
+   "source": [
+    "# Generic Array\n",
+    "\n",
+    "Java explicitly bans an array of generic typed objects.\n",
+    "\n",
+    "It is technically possible via raw types as shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f6e65f2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ArrayDemo {\n",
+    "    public static void main() {\n",
+    "        // List<Integer>[] arr = new List<Integer>[] {null};\n",
+    "        // List<Integer>[] arr = new List<Integer>[10];\n",
+    "        List[] arr = new List[10];\n",
+    "        List<Integer>[] arr2 = arr;\n",
+    "        arr2[0] = new ArrayList<>();\n",
+    "    }\n",
+    "}\n",
+    "ArrayDemo.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b34b0a",
+   "id": "5808dc79",
    "metadata": {},
    "outputs": [],
    "source": []
