More In-Depth review of search order.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -1408,7 +1408,9 @@
     "    - `PriorityQueue`\n",
     "- `Deque` is also an interface that looks much like `Queue` but also has methods like `addFirst`, `addLast`, etc.\n",
     "    - `ArrayDeque`\n",
-    "    - `LinkedList`"
+    "    - `LinkedList`\n",
+    "    \n",
+    "WARNING: `LinkedList` allows null elements but `ArrayDeque` does not."
    ]
   },
   {
