More thoughts from LeetCode practice.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -1512,7 +1512,8 @@
     "- __minheap__ is synonymous with `PriorityQueue` (by default) and is how it's implemented\n",
     "- __maxheap__ is the opposite and can be done with a __comparator__\n",
     "- __order not guaranteed__, only priority\n",
-    "    - if you want multiple things taken into account (eg. insertion order), do a custom comparator that checks the fields in the order that's important to you and returns -1, 0, or 1"
+    "    - if you want multiple things taken into account (eg. insertion order), do a custom comparator that checks the fields in the order that's important to you and returns -1, 0, or 1\n",
+    "    - note also that unlike a set, a priority queue can have __duplicate items__ (order undefined if not explicitly handled by the comparator)"
    ]
   },
   {
