Starting React snippets.

--- a/typescript/Setup.ipynb
+++ b/typescript/Setup.ipynb
@@ -124,6 +124,7 @@
     "- locally installed packages _shadow global_ packages\n",
     "- need to install globally to get _shell commands_ (eg. ng)\n",
     "  - but you can use `npx [command]` to run a locally installed command like ng if you installed locally\n",
+    "    - `npx [command]` on a command not installed yet will find it from online and run its own version from latest\n",
     "- `npm install --save typescript`\n",
     "  - --save is now the default option (in the past it wasn't)\n",
     "  - just means to save to production dependencies portion of package.json\n",
