--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -13,7 +13,6 @@
     "- built-in collections\n",
     "- console\n",
     "- parseInt, etc.\n",
-    "- JSON\n",
     "- built-in JS browser objects like 'this', 'document', and 'window' for DOM manipulation\n"
    ]
   },
@@ -537,9 +536,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "476cbdc8",
+   "metadata": {},
+   "source": [
+    " # JSON\n",
+    " \n",
+    " Use `JSON.stringify` to turn an object into a string.  You can control pretty printing delimitters with the 3rd parameter.\n",
+    " \n",
+    " Use `JSON.parse` to get an object from a string.\n",
+    " \n",
+    " `JSON` is built-into __JavaScript__ itself."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7c008649",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"a\":1,\"b\":2,\"c\":3}\n",
+      "{\n",
+      "   \"a\": 1,\n",
+      "   \"b\": 2,\n",
+      "   \"c\": 3\n",
+      "}\n",
+      "{\n",
+      "   \"a\": 1,\n",
+      "   \"b\": 2,\n",
+      "   \"c\": 3\n",
+      "}\n",
+      "{ a: 1, b: 2, c: 3 }\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const o = {a: 1, b: 2, c: 3};\n",
+    "    \n",
+    "    const s = JSON.stringify(o);\n",
+    "    console.log(s);\n",
+    "    \n",
+    "    const s2 = JSON.stringify(o, null, '   ');\n",
+    "    console.log(s2);\n",
+    "    \n",
+    "    const s3 = JSON.stringify(o, null, 3);\n",
+    "    console.log(s3);\n",
+    "    \n",
+    "    const o2 = JSON.parse(s2);\n",
+    "    console.log(o2);\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f74fbee1",
+   "id": "a5e910e2",
    "metadata": {},
    "outputs": [],
    "source": []
